module/core/diagnostics_tools/tests/inc/snipet/cta_type_same_size_fail.stderr
error[E0308]: mismatched types
 --> $WORKSPACE/module/core/diagnostics_tools/tests/inc/snipet/cta_type_same_size_fail.rs
  |
  |   cta_type_same_size!( Int, u32 );
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |   |
  |   expected an array with a fixed size of 2 elements, found one with 4 elements
  |   expected due to this
  |
  = note: this error originates in the macro `cta_type_same_size` (in Nightly builds, run with -Z macro-backtrace for more info)
