module/core/diagnostics_tools/tests/inc/snipet/cta_type_same_size_fail.rs
use test_tools::diagnostics_tools::*;

fn main()
{
  struct Int( i16 );
  cta_type_same_size!( Int, u32 );
}
